@@ -25,18 +25,10 @@ package st.redline.bootstrap;
 import st.redline.ProtoMethod;
 import st.redline.ProtoObject;
 
-public class ClassSubclassMethod extends ProtoMethod {
+public class ImportMethod extends ProtoMethod {
 
 	public ProtoObject applyTo(ProtoObject receiver, ProtoObject classMethodWasFoundIn, ProtoObject argument) {
-		// System.out.println("ClassSubclassMethod() " + receiver + " " + String.valueOf(argument.javaValue()));
-		String name = fullyQualifiedClassName(String.valueOf(argument.javaValue()));
-		ProtoObject subclass = ProtoObject.primitiveCreateSubclass(receiver, name);
-		ProtoObject.primitiveRegisterAs(subclass, name);
-		return subclass;
-	}
-
-	private String fullyQualifiedClassName(String name) {
-		String packageName = ProtoObject.primitivePackageRegistryCurrent();
-		return packageName == null ? name : packageName + "." + name;
+		System.out.println("ImportMethood() " + receiver + " " + String.valueOf(argument.javaValue()));
+		return null;
 	}
 }
