@@ -1,3 +1,8 @@
+24/08/2011 Changes
+
+Adding implementation of import: method.
+
+
 21/08/2011 Changes
 
 Adding ability to emit JVM bytecode from within a Smalltalk method.
